--- a/front/app/index.html
+++ b/front/app/index.html
@@ -25,6 +25,8 @@
 
   <body ng-app="starterApp" layout="row" ng-controller="UserController as ul" ng-cloak >
 
+  <!--
+
   <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2"
       md-component-id="left"
       ng-click="ul.toggleList()" aria-label="Show User List"
@@ -68,10 +70,15 @@
 
   </div>
 
+  -->
+
+    <md-content flex ng-view></md-content>
+
     <script src="../node_modules/angular/angular.js"></script>
     <script src="../node_modules/angular-animate/angular-animate.js"></script>
     <script src="../node_modules/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
+    <script src="../node_modules/angular-material/angular-material.js"></script>
+    <script src="../node_modules/angular-route/angular-route.js"></script>
 
     <script src="./src/users/Users.js"></script>
     <script src="./src/users/UserController.js"></script>
@@ -80,8 +87,8 @@
     <script type="text/javascript">
 
           angular
-              .module('starterApp', ['ngMaterial', 'users'])
-              .config(function($mdThemingProvider, $mdIconProvider){
+              .module('starterApp', ['ngMaterial', 'users', 'ngRoute'])
+              .config(function($mdThemingProvider, $mdIconProvider, $routeProvider){
 
                   $mdIconProvider
                       .defaultIconSet("./assets/svg/avatars.svg", 128)
@@ -92,9 +99,14 @@
                       .icon("twitter"    , "./assets/svg/twitter.svg"     , 512)
                       .icon("phone"      , "./assets/svg/phone.svg"       , 512);
 
-                      $mdThemingProvider.theme('default')
+                      /*$mdThemingProvider.theme('default')
                           .primaryPalette('brown')
-                          .accentPalette('red');
+                          .accentPalette('red');*/
+
+                  $routeProvider.
+                  when('/phones', {
+                      templateUrl: 'src/accueil/accueil.html'
+                  })
 
               });
 
