front: add: ebauche de l'accueil

--- a/front/app/index.html
+++ b/front/app/index.html
@@ -106,6 +106,9 @@
                   $routeProvider.
                   when('/phones', {
                       templateUrl: 'src/accueil/accueil.html'
+                  }).
+                  when('/home', {
+                      templateUrl: 'src/operateur/home.html'
                   })
 
               });
