feat : Creation des pages photo, video et fiche reflexes

--- a/front/app/index.html
+++ b/front/app/index.html
@@ -32,10 +32,14 @@
     <script src="../node_modules/angular-aria/angular-aria.js"></script>
     <script src="../node_modules/angular-material/angular-material.js"></script>
     <script src="../node_modules/angular-route/angular-route.js"></script>
+    <script src="../node_modules/angular-messages/angular-messages.js"></script>
 
     <script src="src/app.js"></script>
+    <script src="src/client/toolbar/toolbar.js"></script>
     <script src="src/client/accueil/accueil.js"></script>
     <script src="src/client/accueil/accueilController.js"></script>
+    <script src="src/client/transmission/transmission.js"></script>
+    <script src="src/client/transmission/transmissionController.js"></script>
 
 
   </body>
