feat : Service d'ajout d'utilisateur

--- a/front/app/index.html
+++ b/front/app/index.html
@@ -45,6 +45,7 @@
     <script src="src/client/transmission/transmission.js"></script>
     <script src="src/client/transmission/transmissionController.js"></script>
     <script src="src/operateur/Operateur.js"></script>
+    <script src="src/operateur/services/utilisateur.js"></script>
     <script src="src/operateur/homeController.js"></script>
 
   </body>
