--- a/front/app/src/client/accueil/bottomNotification.html
+++ b/front/app/src/client/accueil/bottomNotification.html
@@ -1,4 +1,4 @@
 <md-bottom-sheet layout="column" layout-align="center center">
-    <h4>Un operateur souhaite lancer un appel video</h4>
-    <md-button class="md-primary"><md-icon md-svg-icon="phone"></md-icon>Decrocher</md-button>
+    <h4>Un opérateur souhaite lancer un appel video</h4>
+    <a ng-click="fermer()" href="#/client/transmission"><md-button class="md-primary"><md-icon md-svg-icon="phone"></md-icon>Decrocher</md-button></a>
 </md-bottom-sheet>
