front: add: définition de controlleurs simple

--- a/front/app/index.html
+++ b/front/app/index.html
@@ -11,6 +11,8 @@
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
     <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css"/>
     <link rel="stylesheet" href="assets/app.css"/>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+
 
     <style type="text/css">
         /**
@@ -20,6 +22,8 @@
           display: none !important;
         }
     </style>
+
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
   </head>
 
@@ -36,6 +40,8 @@
     <script src="src/app.js"></script>
     <script src="src/client/accueil/accueil.js"></script>
     <script src="src/client/accueil/accueilController.js"></script>
+    <script src="src/operateur/Operateur.js"></script>
+    <script src="src/operateur/homeController.js"></script>
 
 
   </body>
