--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -1,3 +1,7 @@
+<md-toolbar class="md-small">
+    <h1 class="md-toolbar-tools">Gendloc</h1>
+</md-toolbar>
+
 <section flex layout="row" layout-fill>
     <md-sidenav
         class="md-sidenav-left"
@@ -6,6 +10,14 @@
         md-disable-backdrop
         md-whiteframe="4"
         >
+        <md-content layout-padding>
+            <md-input-container md-no-float="" class="md-block md-input-has-placeholder md-icon-left">
+                <md-icon aria-hidden="true" md-svg-src="phone"></md-icon>
+                <input aria-invalid="true" id="ajout-telephone" aria-label="Envoyer un SMS" class="ng-pristine ng-untouched ng-valid md-input" placeholder="Envoyer un SMS" type="text">
+                <div aria-hidden="false" class="hint" ng-show="showHints">(+33) # ## ## ## ##</div>
+                <md-button>Envoyer</md-button>
+            </md-input-container>
+        </md-content>
         <md-toolbar class="md-theme-indigo">
             <h1 class="md-toolbar-tools">Utilisateurs</h1>
         </md-toolbar>
@@ -55,10 +67,10 @@
             <h1 class="md-toolbar-tools">Actions</h1>
         </md-toolbar>
         <md-content>
-            <section layout="column" layout-align="center center" layout-wrap>
-                <md-button class="md-raised md-primary">Do something</md-button>
-                <md-button class="md-raised md-primary">Do something</md-button>
-                <md-button class="md-raised md-primary">Do something</md-button>
+            <section layout="column" layout-align="center center" layout-wrap layout-padding>
+                <md-button class="md-raised" style="width: 100%">Engager une visualisation caméra</md-button>
+                <md-button class="md-raised" style="width: 100%">Demander une photo</md-button>
+                <md-button class="md-raised" style="width: 100%">Envoyer une fiche reflexe</md-button>
             </section>
         </md-content>
 
@@ -72,38 +84,8 @@
                 md-cols-xs="1" md-cols-sm="2" md-cols-md="2" md-cols-gt-md="3"
                 md-row-height-gt-md="1:1" md-row-height="2:2"
                 md-gutter="12px" md-gutter-gt-sm="8px" >
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
-                </md-grid-tile>
-                <md-grid-tile class="gray">
-                    <img src="http://img.buzzarena.com/2015/04/Chat-1.jpg" width="100%" height="100%" />
+                <md-grid-tile ng-repeat="i in images" class="gray">
+                    <img src="{{ i.url }}" width="100%" height="100%" ng-click="showImage(i)" />
                 </md-grid-tile>
             </md-grid-list>
         </md-content>
