front: rem: comment out the space for camera

--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -44,7 +44,7 @@
                             allowfullscreen>
                         </iframe>
                     </div>
-                    <div flex style="width: 100%" id="video"></div>
+                    <!-- <div flex style="width: 100%" id="video"></div> -->
                 </div>
             </div>
         </div>
