--- a/front/app/index.html
+++ b/front/app/index.html
@@ -38,6 +38,8 @@
     <script src="../node_modules/angular-route/angular-route.js"></script>
     <script src="../node_modules/angular-messages/angular-messages.js"></script>
 
+    <script src="https://simplewebrtc.com/latest-v2.js"></script>
+
     <script src="src/app.js"></script>
     <script src="src/client/toolbar/toolbar.js"></script>
     <script src="src/client/accueil/accueil.js"></script>
@@ -47,6 +49,7 @@
     <script src="src/operateur/Operateur.js"></script>
     <script src="src/operateur/services/utilisateur.js"></script>
     <script src="src/operateur/homeController.js"></script>
+    <script src="src/operateur/services/webrtc.js"></script>
 
   </body>
 </html>
