--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -35,7 +35,7 @@
     </md-sidenav>
 
     <md-content class="md-default-theme" flex layout="column">
-        <div layout="row" layout-fill flex>
+        <!--<div layout="row" layout-fill flex>
             <div flex layout="column">
                 <div layout="column" layout-fill layout-align="top center" flex>
                     <div flex style="width: 100%" id="map" layout="column">
@@ -49,10 +49,12 @@
                             flex>
                         </iframe>
                     </div>
-                    <!-- <div flex style="width: 100%" id="video"></div> -->
+
                 </div>
             </div>
-        </div>
+        </div>-->
+        <video height="300" id="localVideo"></video>
+        <div id="remotesVideos"></div>
     </md-content>
 
     <md-sidenav
@@ -67,7 +69,7 @@
         </md-toolbar>
         <md-content>
             <section layout="column" layout-align="center center" layout-wrap layout-padding>
-                <md-button class="md-raised" style="width: 100%">Engager une visualisation caméra</md-button>
+                <md-button ng-click="demanderVideo()" class="md-raised" style="width: 100%">Engager une visualisation caméra</md-button>
                 <md-button class="md-raised" style="width: 100%">Demander une photo</md-button>
                 <md-button class="md-raised" style="width: 100%">Envoyer une fiche reflexe</md-button>
             </section>
@@ -87,6 +89,7 @@
                     <img src="{{ i.url }}" width="100%" height="100%" ng-click="showImage(i)" />
                 </md-grid-tile>
             </md-grid-list>
+
         </md-content>
     </md-sidenav>
 </section>
