front: add: Selection par keywords dans la popup de recherche de fiches reflexe

--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -68,7 +68,7 @@
             <section layout="column" layout-align="center center" layout-wrap layout-padding>
                 <md-button class="md-raised" style="width: 100%">Engager une visualisation caméra</md-button>
                 <md-button class="md-raised" style="width: 100%">Demander une photo</md-button>
-                <md-button class="md-raised" style="width: 100%">Envoyer une fiche reflexe</md-button>
+                <md-button class="md-raised" style="width: 100%" ng-click="showFiches()">Envoyer une fiche reflexe</md-button>
             </section>
         </md-content>
 
