fix : Webrtc unidirectionnel

--- a/front/app/src/client/transmission/transmission.html
+++ b/front/app/src/client/transmission/transmission.html
@@ -8,7 +8,7 @@
                 <h1 ng-click="toogleSidenav()" class="md-headline" style="text-align: center">Transmission en cours</h1>
             </md-card-title-text>
         </md-card-title>
-        <img class="md-card-image" src="assets/placeholder/placeholder.png">
+        <div id="localVideo"></div>
         <md-card-actions style="margin-bottom: 10px" layout="row" layout-align="center center">
             <md-button class="md-primary">Filmer</md-button>
             <md-button class="md-warn">Interrompre</md-button>
