front: mod: ammélioration de l'espace associé à la map

--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div layout="row" flex>
+        <div layout="row" flex ng-if="videoActive">
             <div id="remotesVideos"></div>
         </div>
     </md-content>
