--- a/front/app/src/operateur/fichesPopup.html
+++ b/front/app/src/operateur/fichesPopup.html
@@ -1,5 +1,5 @@
 
-<md-dialog aria-label="Mango (Fruit)"  ng-cloak>
+<md-dialog ng-cloak>
   <form>
         <md-toolbar>
             <h1 class="md-toolbar-tools">Sélectionner la fiche reflexe à envoyer</h1>
