--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -21,13 +21,13 @@
         <md-toolbar class="md-theme-indigo">
             <h1 class="md-toolbar-tools">Utilisateurs</h1>
         </md-toolbar>
-        <md-content flex md-scroll-y layout-padding>
-            <h4 ng-repeat="u in users" class="parent-list-item">
+        <md-content flex md-scroll-y layout="column" layout-padding>
+            <md-button ng-repeat="u in users" ng-class="{'md-raised': selected == u}" class="parent-list-item" ng-click="selectUser(u)" style="text-align: left">
                 <md-icon ng-if="u.state == 'connected'" md-svg-src="telephone-ok"></md-icon>
                 <md-icon ng-if="u.state != 'connected'" md-svg-src="telephone-nope"></md-icon>
-                <span flex style="padding-left: 10px" ng-click="selectUser(u)">{{ u.phone }}</span>
+                <span flex style="padding-left: 10px">{{ u.phone }}</span>
                 <!-- <md-progress-circular md-mode="indeterminate" ng-if="u.state == 'disconnected'"></md-progress-circular> -->
-            </h4>
+            </md-button>
         </md-content>
     </md-sidenav>
 
