--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -1,5 +1,9 @@
 <md-toolbar class="md-small">
-    <h1 class="md-toolbar-tools">Gendloc</h1>
+    <div class="md-toolbar-tools">
+        <span>Gendloc</span>
+        <span  flex>  </span>
+        <md-button class="md-raised" ng-click="showFiches()">+</md-button>
+    </div>
 </md-toolbar>
 
 <section flex layout="row" layout-fill>
