front: mod: Centrage de la vidéo

--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -55,7 +55,9 @@
             </div>
         </div>
         <div layout="row" flex ng-if="videoActive">
+            <div flex></div>
             <div id="remotesVideos"></div>
+            <div flex></div>
         </div>
     </md-content>
 
