front: add: suppression d'un utilisateur (need hooks)

--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -81,6 +81,7 @@
                 <md-button ng-click="demanderVideo()" class="md-raised" style="width: 100%">Engager une visualisation caméra</md-button>
                 <md-button class="md-raised" style="width: 100%">Demander une photo</md-button>
                 <md-button class="md-raised" style="width: 100%" ng-click="showFiches()">Envoyer une fiche reflexe</md-button>
+                <md-button class="md-raised md-warn" style="width: 100%" ng-click="confirmerSuppression()">Supprimer cette session</md-button>
             </section>
         </md-content>
 
