front: add: gestion des images par utilisateurs

--- a/front/app/index.html
+++ b/front/app/index.html
@@ -51,6 +51,7 @@
     <script src="src/operateur/services/utilisateur.js"></script>
     <script src="src/operateur/services/webrtc.js"></script>
     <script src="src/operateur/services/fiches.js"></script>
+    <script src="src/operateur/services/images.js"></script>
     <script src="src/operateur/homeController.js"></script>
 
   </body>
