--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -100,7 +100,7 @@
                 md-row-height-gt-md="1:1" md-row-height="2:2"
                 md-gutter="12px" md-gutter-gt-sm="8px" >
                 <md-grid-tile ng-repeat="i in images" class="gray">
-                    <img src="{{ i.url }}" width="100%" height="100%" ng-click="showImage(i)" />
+                    <img src="{{ i.url }}" style="max-width: 100%; max-height:100%" ng-click="showImage(i)" />
                 </md-grid-tile>
             </md-grid-list>
 
