refact: backend refactor, useless lib removed

--- a/front/app/index.html
+++ b/front/app/index.html
@@ -39,7 +39,7 @@
     <script src="../node_modules/angular-material/angular-material.js"></script>
     <script src="../node_modules/angular-route/angular-route.js"></script>
     <script src="../node_modules/angular-messages/angular-messages.js"></script>
-    <script src="https://simplewebrtc.com/latest-v2.js"></script>
+    <script src="lib/latest-v2.js"></script>
     <script src="src/app.js"></script>
     <script src="src/operateur/services/webrtc.js"></script>
     <script src="src/client/services/notifications.js"></script>
