--- a/front/app/src/client/photo/photo.html
+++ b/front/app/src/client/photo/photo.html
@@ -8,7 +8,11 @@
                 <h1 ng-click="toogleSidenav()" class="md-headline" style="text-align: center">Prise de photo</h1>
             </md-card-title-text>
         </md-card-title>
-        <img class="md-card-image" src="assets/placeholder/placeholder.png">
+        <!-- <img class="md-card-image" src="assets/placeholder/placeholder.png"> -->
+        <video id="photo" width="640" height="480" autoplay></video>
+        <button id="snap">Snap Photo</button>
+        <canvas id="canvas" width="640" height="480"></canvas>
+        <input type="file" accept="image/*;capture=camera">
         <md-card-actions style="margin-bottom: 10px" layout="row" layout-align="center center">
             <md-button class="md-primary">Filmer</md-button>
             <md-button class="md-warn">Interrompre</md-button>
