feat : chargement des fiches reflexes sur notifications du serveur

--- a/front/app/src/client/fiches/fiches.html
+++ b/front/app/src/client/fiches/fiches.html
@@ -7,6 +7,6 @@
                 <h1 ng-click="toogleSidenav()" class="md-headline" style="text-align: center">Fiches reflexes</h1>
             </md-card-title-text>
         </md-card-title>
-        <img class="md-card-image" src="assets/fiches/pollution.jpg"/>
+        <img class="md-card-image" ng-src="../fichesReflexe/{{lien}}"/>
     </md-card>
 </md-content>
