--- a/front/app/src/client/accueil/bottomPhotoNotif.html
+++ b/front/app/src/client/accueil/bottomPhotoNotif.html
@@ -1,4 +1,4 @@
 <md-bottom-sheet layout="column" layout-align="center center">
     <h4>Un opérateur souhaite recevoir une photo</h4>
-    <a ng-click="fermer()" href="#/client/transmission"><md-button class="md-primary"><md-icon md-svg-icon="phone"></md-icon>Prendre une photo</md-button></a>
+    <a ng-click="fermer()" href="#/client/photo/"><md-button class="md-primary"><md-icon md-svg-icon="phone"></md-icon>Prendre une photo</md-button></a>
 </md-bottom-sheet>
