feat : Système de notification globale à l'application (service)

--- a/front/app/index.html
+++ b/front/app/index.html
@@ -38,6 +38,7 @@
     <script src="src/app.js"></script>
     <script src="src/operateur/services/webrtc.js"></script>
     <script src="src/services/notifications.js"></script>
+    <script src="src/services/websocketCallback.js"></script>
     <script src="src/client/toolbar/toolbar.js"></script>
     <script src="src/client/accueil/accueil.js"></script>
     <script src="src/client/accueil/accueilController.js"></script>
