front: add: Handling des callbacks de angular pour les fiches reflexe

--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -2,7 +2,7 @@
     <div class="md-toolbar-tools">
         <span>Gendloc</span>
         <span  flex>  </span>
-        <md-button class="md-raised" ng-click="showFiches()">+</md-button>
+        <md-button class="md-raised" ng-click="addFiches()">+</md-button>
     </div>
 </md-toolbar>
 
