front: add: support séparation Safari / autre dans la vue

--- a/front/app/src/client/photo/photo.html
+++ b/front/app/src/client/photo/photo.html
@@ -9,7 +9,26 @@
             </md-card-title-text>
         </md-card-title>
         <!-- <img class="md-card-image" src="assets/placeholder/placeholder.png"> -->
+
+        <!-- Support différent selon les navigateurs :
+               Safari a une manière particulière de gérer la prise de photo ; on différencie
+               donc les navigateurs
+        -->
+        <div ng-if="isSafari">
             <input type="file" accept="image/*">
+        </div>
+
+        <!-- Tout autre navigateur peut embed un champ vidéo -->
+        <div ng-if="!isSafari" layout="column">
+            <video ng-init="loadVideoStream()" id="photo" width="640" height="480" ng-src="videoUrl" autoplay></video>
+            <button ng-click="takePicture()">Snap Photo</button>
+            <canvas id="canvas" width="640" height="480"></canvas>
+            <md-card-actions style="margin-bottom: 10px" layout="row" layout-align="center center">
+                <md-button class="md-primary">Filmer</md-button>
+                <md-button class="md-warn">Interrompre</md-button>
+            </md-card-actions>
+
+        </div>
     </md-card>
 
 
