front: add: support safari

--- a/front/app/src/client/photo/photo.html
+++ b/front/app/src/client/photo/photo.html
@@ -16,7 +16,7 @@
         -->
         <div ng-if="isSafari">
             <form name="safari-form" ng-submit="submitSafari()">
-                <input ng-model="data" type="file" accept="image/*">
+                <input ng-model="safariData" type="file" accept="image/*">
                 <md-button ng-click="submitSafari()">Envoyer la photo</md-button>
             </form>
         </div>
