feat :Notification upload photo

--- a/front/app/src/operateur/home.html
+++ b/front/app/src/operateur/home.html
@@ -100,7 +100,7 @@
         <md-content>
             <section layout="column" layout-align="center center" layout-wrap layout-padding>
                 <md-button ng-click="demanderVideo()" class="md-raised" style="width: 100%">Engager une visualisation caméra</md-button>
-                <md-button class="md-raised" style="width: 100%">Demander une photo</md-button>
+                <md-button class="md-raised" style="width: 100%" ng-click="demanderPhoto()">Demander une photo</md-button>
                 <md-button class="md-raised" style="width: 100%" ng-click="showFiches()">Envoyer une fiche reflexe</md-button>
                 <md-button class="md-raised md-warn" style="width: 100%" ng-click="confirmerSuppression()">Supprimer cette session</md-button>
             </section>
