--- a/front/app/src/client/accueil/bottomSheet/video.html
+++ b/front/app/src/client/accueil/bottomSheet/video.html
@@ -1,4 +1,4 @@
 <md-bottom-sheet layout="column" layout-align="center center">
     <h4>Un opérateur souhaite lancer un appel video</h4>
-    <a ng-click="fermer()" href="#/client/transmission/0645854712"><md-button class="md-primary"><md-icon md-svg-icon="phone"></md-icon>Decrocher</md-button></a>
+    <a ng-click="fermer()" href="#/client/transmission/{{telephone}}"><md-button class="md-primary"><md-icon md-svg-icon="phone"></md-icon>Decrocher</md-button></a>
 </md-bottom-sheet>
