--- a/front/app/src/client/accueil/accueil.html
+++ b/front/app/src/client/accueil/accueil.html
@@ -5,6 +5,6 @@
     <h1 style="text-align: center">Précision de votre localisation</h1>
     <md-progress-linear md-mode="determinate" value="60"></md-progress-linear>
     <h4>60m</h4>
-    <h2 style="text-align: center">Un opérateur va vous joindre, ne quitter pas la page web</h2>
+    <h2 style="text-align: center">Un opérateur va vous joindre, ne quittez pas la page web</h2>
     <div class="flex"></div>
 </md-content>
